--- a/userside/templates/account_verification.html
+++ b/userside/templates/account_verification.html
@@ -3,6 +3,7 @@
 Hii {{user.username}},
 
 Please click on below link to confirm your registration.
+{% comment %} https://cargoself.vercel.app{% url 'activate' uidb64=uid token=token %} {% endcomment %}
 http://127.0.0.1:8000{% url 'activate' uidb64=uid token=token %}
 
 If its not you, please ignore this mail.
